Fix TaskController
